# SSCore

./: .gitignore  CMakeBuild.md  CMakeLists.txt  Makefile  README.md  SSAngle.cpp  SSAngle.hpp  SSConstellation.cpp  SSConstellation.hpp  SSCoords.cpp  SSCoords.hpp  SSDynamics.cpp  SSDynamics.hpp  SSHipparcos.cpp  SSHipparcos.hpp  SSIdentifier.cpp  SSIdentifier.hpp  SSImportGJ.cpp  SSImportGJ.hpp  SSImportHIP.cpp  SSImportMPC.cpp  SSImportMPC.hpp  SSImportNGCIC.cpp  SSImportNGCIC.hpp  SSImportSKY2000.cpp  SSImportSKY2000.hpp  SSJPLDEphemeris.cpp  SSJPLDEphemeris.hpp  SSMPC.cpp  SSMPC.hpp  SSMatrix.cpp  SSMatrix.hpp  SSNGCIC.cpp  SSNGCIC.hpp  SSObject.cpp  SSObject.hpp  SSOrbit.cpp  SSOrbit.hpp  SSPlanet.cpp  SSPlanet.hpp  (+16 more)
CSVData/Constellations/: Boundaries.csv  Constellations.csv  Shapes.csv
CSVData/DeepSky/: Caldwell.csv  Messier.csv  Names.csv
CSVData/SolarSystem/: Planets.csv
CSVData/Stars/: Brightest.csv  Nearest.csv
SSCode/: ELPMPP02.cpp  ELPMPP02.hpp  SSAngle.cpp  SSAngle.hpp  SSConstellation.cpp  SSConstellation.hpp  SSCoordinates.cpp  SSCoordinates.hpp  SSCoords.cpp  SSCoords.hpp  SSDynamics.cpp  SSDynamics.hpp  SSEvent.cpp  SSEvent.hpp  SSFeature.cpp  SSFeature.hpp  SSHTM.cpp  SSHTM.hpp  SSIdentifier.cpp  SSIdentifier.hpp  SSImportGAIADR3.cpp  SSImportGAIADR3.hpp  SSImportGCVS.cpp  SSImportGCVS.hpp  SSImportGJ.cpp  SSImportGJ.hpp  SSImportHIP.cpp  SSImportHIP.hpp  SSImportJPL.cpp  SSImportJPL.hpp  SSImportMPC.cpp  SSImportMPC.hpp  SSImportNGCIC.cpp  SSImportNGCIC.hpp  SSImportSKY2000.cpp  SSImportSKY2000.hpp  SSImportTLE.cpp  SSImportTLE.hpp  SSImportTYC.cpp  SSImportTYC.hpp  (+40 more)
SSCode/Tetra3/: Tetra3.cpp  Tetra3.hpp  cnpy.cpp  cnpy.h  svdcmp.c  svdcmp.h  tetra3.py
SSCode/VSOP2013/: ELPMPP02.cpp  ELPMPP02.hpp  VSOP2013.cpp  VSOP2013.hpp  VSOP2013p1.cpp  VSOP2013p2.cpp  VSOP2013p3.cpp  VSOP2013p4.cpp  VSOP2013p5.cpp  VSOP2013p6.cpp  VSOP2013p7.cpp  VSOP2013p8.cpp  VSOP2013p9.cpp
SSCore.xcodeproj/: project.pbxproj
SSData/Constellations/: Shapes.csv
SSData/DeepSky/: Caldwell.csv  MCNGCIC.csv  Messier.csv  MilkyWay.csv  Names.csv  README.md
SSData/DeepSky/Nebulae/: Contours.csv  Index.csv
SSData/SolarSystem/: Asteroids.txt  Cities.csv  Comets.txt  Features.csv  JPLComets.csv  Moons.csv  Planets.csv  README.md
SSData/SolarSystem/Geonames/: admin1CodesASCII.txt  cities.py  features.py  timeZones.txt
SSData/SolarSystem/Satellites/: all.txt  brightest.txt  je9pel.csv  mcnames.txt  n2yo.csv  testdata.csv  testdata.txt  visual.txt
SSData/Stars/: Brightest.csv  Doubles.csv  Names.csv  Nearest.csv  README.md  Tetra3.npz
SSTest/: SSMountTest.cpp  SSTLETest.cpp  SSTest.cpp  SSTest.h  SSTetraTest.cpp
SSTest/Android/: .gitignore  README.md  build.gradle  settings.gradle
SSTest/Android/gradle/wrapper/: gradle-wrapper.properties
SSTest/Android/sstest/: build.gradle
SSTest/Android/sstest/src/main/: AndroidManifest.xml
SSTest/Android/sstest/src/main/cpp/: CMakeLists.txt  native-lib.cpp
SSTest/Android/sstest/src/main/java/com/southernstars/sscore/: JSSAngle.java  JSSCalendar.java  JSSCoordinates.java  JSSDate.java  JSSDegMinSec.java  JSSDouble.java  JSSEvent.java  JSSEventTime.java  JSSHourMinSec.java  JSSIdentifier.java  JSSJPLDEphemeris.java  JSSMatrix.java  JSSObject.java  JSSObjectArray.java  JSSPass.java  JSSRTS.java  JSSSpherical.java  JSSTime.java  JSSVector.java
SSTest/Android/sstest/src/main/java/com/southernstars/sstest/: MainActivity.kt
SSTest/Android/sstest/src/main/jni/: JNIUtilities.cpp  JNIUtilities.h  com_southernstars_sscore_JSSAngle.cpp  com_southernstars_sscore_JSSAngle.h  com_southernstars_sscore_JSSCalendar.cpp  com_southernstars_sscore_JSSCalendar.h  com_southernstars_sscore_JSSCoordinates.cpp  com_southernstars_sscore_JSSCoordinates.h  com_southernstars_sscore_JSSDate.cpp  com_southernstars_sscore_JSSDate.h  com_southernstars_sscore_JSSDegMinSec.cpp  com_southernstars_sscore_JSSDegMinSec.h  com_southernstars_sscore_JSSEvent.cpp  com_southernstars_sscore_JSSEvent.h  com_southernstars_sscore_JSSEventTime.cpp  com_southernstars_sscore_JSSEventTime.h  com_southernstars_sscore_JSSHourMinSec.cpp  com_southernstars_sscore_JSSHourMinSec.h  com_southernstars_sscore_JSSIdentifier.cpp  com_southernstars_sscore_JSSIdentifier.h  com_southernstars_sscore_JSSJPLDEphemeris.cpp  com_southernstars_sscore_JSSJPLDEphemeris.h  com_southernstars_sscore_JSSMatrix.cpp  com_southernstars_sscore_JSSMatrix.h  com_southernstars_sscore_JSSObject.cpp  com_southernstars_sscore_JSSObject.h  com_southernstars_sscore_JSSObjectArray.cpp  com_southernstars_sscore_JSSObjectArray.h  com_southernstars_sscore_JSSPass.cpp  com_southernstars_sscore_JSSPass.h  com_southernstars_sscore_JSSRTS.cpp  com_southernstars_sscore_JSSRTS.h  com_southernstars_sscore_JSSSpherical.cpp  com_southernstars_sscore_JSSSpherical.h  com_southernstars_sscore_JSSTime.cpp  com_southernstars_sscore_JSSTime.h  com_southernstars_sscore_JSSVector.cpp  com_southernstars_sscore_JSSVector.h
SSTest/Android/sstest/src/main/res/layout/: activity_main.xml
SSTest/Android/sstest/src/main/res/values/: strings.xml
SSTest/Emscripten/: Makefile
SSTest/Linux/: Makefile
SSTest/MacOS/: README.md
SSTest/MacOS/SSTest.xcodeproj/: project.pbxproj
SSTest/MacOS/SSTest.xcodeproj/xcshareddata/xcschemes/: SSMountTest.xcscheme  SSTLETest.xcscheme  SSTest.xcscheme
SSTest/QtProjects/: SSTst.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
SSTest/Windows/: SSMountTest.vcxproj  SSMountTest.vcxproj.filters  SSTest.sln  SSTest.vcxproj  SSTest.vcxproj.filters
SSTest/Xcode/SSTest.xcodeproj/: project.pbxproj
SSTest/Xcode/SSTest.xcodeproj/xcshareddata/xcschemes/: SSTest.xcscheme
SSTest/iOS/: AppDelegate.swift  ContentView.swift  README.md  SSCore.cpp  SSCore.h  SSTest-Bridging-Header.h  SSTest.h  SceneDelegate.swift
SSTest/iOS/SSTest.xcodeproj/: project.pbxproj
SSTest/iOS/SSTest.xcodeproj/xcshareddata/xcschemes/: SSTest.xcscheme
